--- a/project.html
+++ b/project.html
@@ -1,221 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<title>project</title>
-	<meta charset="utf-8">
-	<meta name="viewpointer" content="width=device-width,initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
-	<script src="jquery.min.js"></script>
-	<script src="bootstrap.min.js"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="info.css">
-  <style type="text/css">
-  	body
-  	{
-  		background: black;
-  	}
-  	h1
-  	{
-  		color: white;
+    <head>
+        <title>project</title>
+        <meta charset="utf-8" />
+        <meta name="viewpointer" content="width=device-width,initial-scale=1" />
 
-  	}
-  	p
-  	{
-  		color:white;
-  	}
-  	ul
-  	{
-  		color: black;
-  	}
-  	.button {
-  background-color: #ffff00;
-  border: none;
-  color: black;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 20px;
-  margin: 4px 2px;
-  
-}
-footer
-{
-	height: 200px;
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous    " />
 
-}
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous" />
 
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <style>
+            body {
+                background: black;
+                color: white;
+            }
+            .wd-85per {
+                width: 85%;
+            }
+            .wd-35per{
+                width: 35%;
+            }
+            .wd-45per{
+                width: 45%;
+            }
+            .pt-1per {
+                padding-top: 1%;
+            }
+            .pt-2per {
+                padding-top: 2%;
+            }
+            .pb-2per {
+                padding-bottom: 2%;
+            }
+            .pt-3per {
+                padding-top: 3%;
+            }
+            .pt-5per {
+                padding-top: 5%;
+            }
+            .pb-5per {
+                padding-bottom: 5%;
+            }
+            .bg-clr-dark-grey {
+               background-color: #868686;
+            }
+            .ft-weight-bold {
+                font-weight: bold;
+            }
+            .no-mar {
+                margin:  0px !important;
+            }
+            .button-style {
+                background-color: #ffff00;
+                color: black;
+                padding: 10px;
+                text-align: center;
+                font-size: 15px;
+                margin: 0px !important;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="container">
+            <div class="row pt-2per">
+                <div class="col-md-4">
+                    <p>
+                        Johnathan Specter
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-md-2">
+                            <h5 class="no-mar">Articles</h5>
+                        </div>
+                        <div class="col-md-2">
+                            <h5 class="no-mar">Chats</h5>
+                        </div>
+                        <div class="col-md-2">
+                            <h5 class="no-mar">Awards</h5>
+                        </div>
+                        <div class="col-md-2">
+                            <h5 class="no-mar">About</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <p class="button-style">Get in touch</p>
+                </div>
+            </div>
+            <div class="row pt-3per">
+                <div class="col-md-6">
+                    <h1><p>Helping companies build better, scalable software.</p></h1>
+                    <p class="text-justify">Award-winning web developer and author,with over 15+ years of working experience withfortune 500 companies likwe Apple,Google,Facebook,and more.</p>
+                </div>
+            </div>
+            <div class="row pt-10 pt-2per">
+                <div class="col-md-2">
+                    <img src="images/Walmart.svg" class="wd-45per"/>
+                </div>
+                <div class="col-md-2">
+                    <img src="images/JP Morgan.svg" class="wd-45per"/>
+                </div>
+                <div class="col-md-2">
+                    <img src="images/Visa.svg" class="wd-35per"/>
+                </div>
+                <div class="col-md-2">
+                    <img src="images/Tinder.svg" class="wd-45per"/>
+                </div>
+                <div class="col-md-2">
+                    <img src="images/Samsung.svg" class="wd-45per"/>
+                </div>
+                <div class="col-md-2">
+                    <img src="images/Verizon.svg" class="wd-45per"/>
+                </div>
+            </div>
+            <div class="row pt-3per">
+                <div class="col-md-6">
+                    <img src="images/Spense.png" class="wd-85per" />
+                </div>
+                <div class="col-md-6">
+                    <img src="images/Yelpcamp.png" class="wd-85per" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <h1>Spence.com<i class="fa fa-long-arrow-right"></i></h1>
+                    <p class="text-justify">
+                        Rethinking the way writers get paid,anopen-source platform desighned to the help writers focus more on writing,and less on when and how they'll get paid.Project in collaboration with Codewell.cc
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <h1>Yelpcamp.com<i class="fa fa-long-arrow-right"></i></h1>
+                    <p class="text-justify">Allowing backpack travelers to perfectly plan their trip throughanopen-source platform similiar to Tripadvisor.with over 1m MAU,Yelpcamp has been the crowds favourite in 2021,</p>
+                </div>
+            </div>
 
-  </style>
-</head>
-<body>
+            <div class="row pt-5per pb-5per bg-clr-dark-grey">
+                <div class="col-md-6">
+                    <h3 class="ft-weight-bold no-mar">
+                        A co-founder at one of the world's largest communities.
+                    </h3>
 
-  <nav class="navbar navbar-inverse">
-<div class="container">
-	<div class="col-md-8">
-<div class="navbar-header">
-	
-<h3><b><font color="white" face="batang">Johnathan Specter</font></b></h3>
+                    <p class="pb-5per pt-5per">The combined experience I have working at the top fortune 500 companies has allowed me to developer a skillset that helps me in not just development,but in every aspect of any bussiness</p>
 
-</div>
+                    <p>I'm proud to announce that i am now working at one of the world's largest communities teaching young minds about how to sell your self as adeveloper and open them to a whole new world of opportunities</p>
+                </div>
 
-<ul class="nav navbar-nav navbar-left">
-<li><a href=""><h5>Articles</h5></a></li>
-<li><a href=""><h5>Chats</h5></a></li>
-<li><a href=""><h5>Awards</h5></a></li>
-<li><a href=""><h5>About</h5></a></li>
-</ul>
-
-<ul class="nav navbar-nav navbar-right">
-<li><a href="" class="button">Get in touch</a></li>
-</ul>
-</div>
-</div>
-</nav>
-<div class="container">
-	<div class="row">
-	<div class="col-md-6">
-		<h1><font face="Playfair Display">Helping companies build better,scalable software.</font></h1>
-	
-	<div class="row">
-		<div class="col-md-10">
-		<p class="text-justify">Award-winning web developer and author,with over 15+ years of working experience withfortune 500 companies likwe Apple,Google,Facebook,and more,</p>
-	
-</div>
-</div>
-</div>
-</div>
-
-
-
-<div class="row">
-	<div class="col-md-8">
-		<div class="row">
-			<div class="col-md-2">
-		<img src="images/Walmart.svg" width="80%">
-</div>
-<div class="col-md-2">
-		<img src="images/JP Morgan.svg" width="80%">
-</div>
-<div class="col-md-2">
-		<img src="images/Visa.svg" width="80%">
-</div>
-<div class="col-md-2">
-		<img src="images/Tinder.svg" width="80%">
-</div>
-<div class="col-md-2">
-		<img src="images/Samsung.svg" width="80%">
-</div>
-<div class="col-md-2">
-		<img src="images/Verizon.svg" width="80%">
-</div>
-</div>
-</div>
-</div>
-<div class="row">
-	<div class="col-md-4">
-		<img src="images/Spense.png" width="95%">
-	</div>
-	<div class="col-md-4">
-		<img src="images/Yelpcamp.png" width="95%">
-	</div>
-</div>
-
-
-
-
-
-
-<div class="row">
-	<div class="col-md-4">
-		<h1><b><font face="Times New Roman">Spence.com<i class=" fa fa-long-arrow-right"></i></font></b></h1>
-		<p class="text-justify">Rethinking the way writers get paid,anopen-source platform desighned to the help writers focus more on writing,and less on when and how they'll get paid.Project in collaboration with Codewell.cc</p>
-	</div>
-	<div class="col-md-4">
-		<h1><b><font face="Times New Roman">Yelpcamp.com<i class=" fa fa-long-arrow-right"></i></font></b></h1>
-		<p class="text-justify">Allowing backpack travelers to perfectly plan their trip throughanopen-source platform similiar to Tripadvisor.with over 1m MAU,Yelpcamp has been the crowds favourite in 2021,</p>
-	</div>
-</div>
-
-
-	
-	<div class="row" >
-				<div class="col-md-4" style="background-color: grey";>
-			<h3><font color="white" face="Times New Roman"><b>A co-founder at one of the world's largest communities.</b></font></h3>
-		<p>The combined experience I have working at the top fortune 500 companies has allowed me to developer a skillset that helps me in not just development,but in every aspect of any bussiness</p>
-
-			<p>I'm proud to announce that i am now working at one of the world's largest communities teaching young minds about how to sell your self as adeveloper and open them to a whole new world of opportunities</p>
-		</div>
-	
-	
-		<div class="col-md-4" style="background-color: grey";>
-
-			<p>As a developer,you have everything available to you and all that's holding you back is yourself.</p>
-			<p>A quote I live by perfectly illustrates what I mean.</p>
-			<p>"How big would you dream, if you knew you wouldn't fail?" You've already gone through the hardest parts being a deveoper,it's time to elevate your skills and become a leader in something you're passionate about.</p>
-			<p>I'm happy to chat bover coffee some time about how i can help your company</p>
-
-		
-	</div>
-</div>
-
-
-
-
-<div class="row">
-	<div class="col-md-8">
-		<h1>Interested in working with me?</h1>
-	</div>
-</div>
-	<div class="row">
-	<div class="col-md-4">
-		<p>I'm active on all social media platforms listed belows,but you can also me an email and i will get back to you 24-48 hours</p>
-		<a href="" class="button">Get in touch</a>
-	</div>
-</div>
-
-
-<footer style="width: 759px;">
-	
-		<div class="row" style="background-color:darkgrey;">
-			<div class="col-md-5">
-	<h3><font color="white">Johnathan Specter</font></h3>
-</div>
-
-
-	<div class="col-md-1">
-
-	<img src="images/Twitter.svg" width="100%">
-</div>
-<div class="col-md-1">
-	<img src="images/LinkedIn.svg" width="100%">
-</div>
-<div class="col-md-1">
-	<img src="images/Github.svg" width="100%">
-</div>
-
-</div>
-</footer>
-</div>
-
-
-
-
-
-
-
-
-
-
-</body>
-
-
-
-
-
-
-
-
-
-
+                <div class="col-md-6">
+                    <p>As a developer,you have everything available to you and all that's holding you back is yourself.</p>
+                    <p>A quote I live by perfectly illustrates what I mean.</p>
+                    <p class="pt-2per pb-2per">"How big would you dream, if you knew you wouldn't fail?" You've already gone through the hardest parts being a deveoper,it's time to elevate your skills and become a leader in something you're passionate about.</p>
+                    <p>I'm happy to chat bover coffee some time about how i can help your company</p>
+                </div>
+            </div>
+            <div class="row pt-5per">
+                <div class="col-md-6">
+                    <h3 class="ft-weight-bold no-mar">Interested in working with me?</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 pt-1per">
+                    <p>I'm active on all social media platforms listed belows,but you can also me an email and i will get back to you 24-48 hours</p>
+                    <p class="col-md-4 button-style">Get in touch</p>
+                </div>
+            </div>
+            <div class="row pt-5per">
+                    <div class="col-md-11">
+                        <p>Johnathan Specter</p>
+                    </div>
+                    <div class="col-md-1">
+                        <div class="row">
+                            <div class="col-md-2">
+                                <img src="images/Twitter.svg" />
+                            </div>
+                            <div class="col-md-2">
+                                <img src="images/LinkedIn.svg" />
+                            </div>
+                            <div class="col-md-2">
+                                <img src="images/Github.svg" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </div>
+    </body>
+</html>
